[gd_scene load_steps=9 format=3 uid="uid://dq68xiljmb0c"]

[ext_resource type="Script" uid="uid://bj6vhr88ehmp0" path="res://ui/menus/MainMenu.gd" id="2_3rsjx"]
[ext_resource type="Texture2D" uid="uid://crd5f2fix1fjj" path="res://assets/ui/images/backgroundMainMenu.png" id="3_3rsjx"]
[ext_resource type="Theme" uid="uid://bfjfjpdmxcwel" path="res://ui/themes/menuTheme.tres" id="3_8xbtc"]
[ext_resource type="Texture2D" uid="uid://b7y4hxkno6616" path="res://assets/ui/images/geistLogo.png" id="4_bmxya"]
[ext_resource type="PackedScene" uid="uid://b1q75kxcjcb4j" path="res://ui/menus/optionsMenu.tscn" id="5_bmxya"]

[sub_resource type="Animation" id="Animation_bmxya"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundImage:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-407, -3), Vector2(-118, -3)]
}

[sub_resource type="Animation" id="Animation_3rsjx"]
resource_name = "new_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundImage:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-408, -99), Vector2(-374, -99)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2i8be"]
_data = {
&"RESET": SubResource("Animation_bmxya"),
&"new_animation": SubResource("Animation_3rsjx")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_8xbtc")
script = ExtResource("2_3rsjx")

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -407.0
offset_top = -3.0
offset_right = 2341.0
offset_bottom = 1349.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_3rsjx")

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -401.0
offset_top = -270.0
offset_right = 1206.0
offset_bottom = 426.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_bmxya")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 478.0
offset_top = 417.0
offset_right = 670.0
offset_bottom = 545.0

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "LOAD"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "EXIT"

[node name="OptionsMenu" parent="." instance=ExtResource("5_bmxya")]
visible = false
layout_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2i8be")
}
autoplay = "new_animation"
